--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(nowcoder)
 set(CMAKE_CXX_STANDARD 11)
 
 set(SOURCE_FILES
-        sword_to_offer/Solution_06.cpp sword_to_offer/Solution_07.cpp sword_to_offer/Solution_08.cpp sword_to_offer/Solution_09.cpp sword_to_offer/Solution_10.cpp sword_to_offer/Solution_11.cpp)
+        sword_to_offer/Solution_17.cpp)
 
 add_executable(nowcoder ${SOURCE_FILES})
