提交华为测试题

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(nowcoder)
 set(CMAKE_CXX_STANDARD 11)
 
 set(SOURCE_FILES
-        sword_to_offer/Solution_23.cpp sword_to_offer/Solution_24.cpp)
+        huawei/Solution_02.cpp)
 
 add_executable(nowcoder ${SOURCE_FILES})
